AUGREL/src/objects/Repossession__c.object
<CustomObject>
    <fields>
        <fullName>IRepo_MessageId__c</fullName>
        <description>SRC: iRepo
INT: iRepo M1 &amp; M2 TIBCO Pull
Trans: N
BU: RL
FD: Unique ID for the latest message from iRepo to update the Repossession. Admin reference item for troubleshooting with integration and iRepo.</description>
        <label>iRepo Message ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRepo_TemplateInsertDate__c</fullName>
        <description>SRC: iRepo
INT: iRepo M1 TIBCO Pull
Trans: N
BU: RL
FD: Date of the template/NOI data completion. Not actively used in the RL process but available for reference.</description>
        <label>iRepo Template Insert Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IRepo_VendorName__c</fullName>
        <description>SRC: iRepo
INT: iRepo M1 TIBCO Pull
Trans: N
BU: RL
FD: Name of the forwarding vendor used to process the repossession. Not actively used in RL process but available for reference.</description>
        <label>iRepo Vendor Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impound_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: iRepo
INT: iRepo M2 TIBCO Pull
Trans: N
BU: RL
FD: Impound fee (repairs, citations, etc.) sent from iRepo for release of vehicle. Included in total balance owed.</description>
        <label>Impound Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Other_Reason_For_No_Reinstatement__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to indicate the user&apos;s picklist choice for reinstatement denial reason was not due to reinstatement within last 12 months or twice in the total term. Sends the required &quot;true&quot; value to Adobe Forms processing.</description>
        <formula>!ISPICKVAL(Reinstatement_Denial_Reason__c, &quot;Reinstated 1x Last 12 Mos / 2x in Term&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Other Reason For No Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Refund_Amount__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to transform the polarity of the lease refund amount as expected within the Adobe Forms processing. Open accounts have negative refund values and closed accounts have positive - the form is written to expect the opposite.</description>
        <formula>-Financial_Account__r.Refund__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Repo_Date_Time__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Date and time of repo at place of repossession. Since date/time of repo is provided in GMT, it must be converted to the local date and time. This is stored in a text field and handled within the RL Set State Conditions Flow and associated date/time Apex plug-in.</description>
        <label>Local Repo Date/Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Repo_Date__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Date of the repossession at the place of repossession. Since date/time is received in GMT, date must be converted to a local date and stored here. Handled within the RL Set State Conditions Flow and associated date/time Apex plug-in.</description>
        <label>Local Repo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MD_Unpaid_Gross_Lease_Balance__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to represent the lease balance in specific terms for MD. Sends the expected value to Adobe Forms processing.</description>
        <formula>UnpaidGrossBalance__c + Financial_Account__r.Security_Deposit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MD Unpaid Gross Lease Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Metric_Assignment_to_Closed_Hours__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to calculate the time from initial assignment to closure. Used in productivity metric reports.</description>
        <formula>(Case__r.ClosedDate - Case__r.RL_Initial_Assignment_Time__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric: Assignment to Closed Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Assignment_to_First_Pass_Hours__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to calculate the time between the initial assignment (take ownership) and changing status from In-Progress. Indicates the initial active processing time. Used in productivity metric reports.</description>
        <formula>(Case__r.RL_Initial_Pass_Completion_Time__c - Case__r.RL_Initial_Assignment_Time__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric: Assignment to First Pass Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Assignment_to_Second_Pass_Hours__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to calculate time between a secondary assignment and changing from an In-Progress status. Intended to capture the active processing time a case takes when it has already been initially worked by someone else. Used in productivity metric reports.</description>
        <formula>(Case__r.RL_Secondary_Pass_Completion_Time__c - Case__r.RL_Secondary_Assignment_Time__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric: Assignment to Second Pass Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Created_to_Assignment_Hours__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to calculate the time between case creation and initial assignment (take ownership). Used in productivity metric reports.</description>
        <formula>(Case__r.RL_Initial_Assignment_Time__c - Case__r.CreatedDate) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric: Created to Assignment Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Created_to_Closed_Hours__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to calculate the total time the case was opened. Used in productivity metric reports.</description>
        <formula>(Case__r.ClosedDate - Case__r.CreatedDate) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric: Created to Closed Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Charges__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Formula field to expose the miscellaneous charges on the repossession page layout from the financial account.</description>
        <formula>Case__r.Financial_Account__r.Charges_Miscellaneous__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Miscellaneous Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modify_REPO_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Indicates when the next usage of the REPO activity code in the activity entry panel should include a modified generated note focused on highlighting the legal sale date change. Set by letter generation code upon regeneration and unset once the REPO activity note is saved.</description>
        <label>Modify REPO Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NJ_NY_Gross_Unpaid_Lease_Balance__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to transform lease balance to terms specific to NJ/NY. Sends the expected value to Adobe Forms processing.</description>
        <formula>Financial_Account__r.Contract_Receivable__c + Financial_Account__r.Payment_Amount_Past_Due__c + Financial_Account__r.Charges_Miscellaneous__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NJ/NY Gross Unpaid Lease Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Date__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to calculate next scheduled payment date from Host-fed Financial_Account__c.Payment_Date_Next__c for comparison in validation. Takes into consideration end of year, February short month, February leap year, and payments scheduled on the last day of a month when the next scheduled month only has 30 days, but Financial_Account__c.Payment_Date_Next__c was scheduled on the 31st.</description>
        <formula>IF(DAY(TODAY()) &gt; DAY(Financial_Account__r.Payment_Date_Next__c),
  DATE(IF(MONTH(TODAY()) = 12,
         YEAR(TODAY()) + 1,
         YEAR(TODAY())
       ),
    IF(MONTH(TODAY()) = 12,
      1,
      MONTH(TODAY()) + 1
    ),
    IF(MONTH(TODAY()) = 1 &amp;&amp; MOD(YEAR(TODAY()), 4) = 0 &amp;&amp; DAY(Financial_Account__r.Payment_Date_Next__c) &gt; 29,
      29,
      IF(MONTH(TODAY()) = 1 &amp;&amp; MOD(YEAR(TODAY()), 4) != 0 &amp;&amp; DAY(Financial_Account__r.Payment_Date_Next__c) &gt; 28,
        28,
        IF(MOD(MONTH(TODAY()) + 1, 2) = 0 &amp;&amp; MONTH(TODAY()) + 1 &lt; 7 &amp;&amp; DAY(Financial_Account__r.Payment_Date_Next__c) = 31,
          30,
          IF(MOD(MONTH(TODAY()) + 1, 2) = 1 &amp;&amp; MONTH(TODAY()) + 1 &lt; 13 &amp;&amp; DAY(Financial_Account__r.Payment_Date_Next__c) = 31,
            30,
            DAY(Financial_Account__r.Payment_Date_Next__c)
          )
        )
      )
    )
  ),

  DATE(YEAR(TODAY()), MONTH(TODAY()),
    IF(MONTH(TODAY()) = 2 &amp;&amp; MOD(YEAR(TODAY()), 4) = 0 &amp;&amp; DAY(Financial_Account__r.Payment_Date_Next__c) &gt; 29,
      29,
      IF(MONTH(TODAY()) = 2 &amp;&amp; MOD(YEAR(TODAY()), 4) != 0 &amp;&amp; DAY(Financial_Account__r.Payment_Date_Next__c) &gt; 28,
        28,
        IF(MOD(MONTH(TODAY()), 2) = 0 &amp;&amp; MONTH(TODAY()) &lt; 7 &amp;&amp; DAY(Financial_Account__r.Payment_Date_Next__c) = 31,
          30,
          IF(MOD(MONTH(TODAY()), 2) = 1 &amp;&amp; DAY(Financial_Account__r.Payment_Date_Next__c) = 31,
            30,
            DAY(Financial_Account__r.Payment_Date_Next__c)
          )
        )
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Charges1_Description__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: User-entered description for the first other charge.</description>
        <label>Other Charges1 Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges1_Transformed__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to transform a $0 value to blank so that the field isn&apos;t included in the message to Adobe Forms processing.</description>
        <formula>IF(Other_Charges1__c = 0, null, Other_Charges1__c)</formula>
        <label>Other Charges1 Transformed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Charges1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Captures charges that may come with the repossession that don&apos;t fit in other designated fields on the form. Not expected to be used, but available in case form development can&apos;t turn around a new requirement in time to meet compliance concerns.</description>
        <label>Other Charges1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Charges2_Description__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: User-entered description for the second other charge.</description>
        <label>Other Charges2 Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges2_Transformed__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to transform $0 values to blanks so the field is not sent to Adobe Forms processing.</description>
        <formula>IF(Other_Charges2__c = 0, null, Other_Charges2__c)</formula>
        <label>Other Charges2 Transformed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Charges2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Unanticipated charges that don&apos;t fit within existing currency fields. Intended to capture fees that may be required by compliance, but don&apos;t have a designated separate field for entry. Contingency field in case forms development process cannot enable a designated field in time to meet compliance requirement.</description>
        <label>Other Charges2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Charges_City__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: User-entered city portion of address for other charges.</description>
        <label>Other Charges City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Name__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: User-entered name portion of other charges address.</description>
        <label>Other Charges Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Phone__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: User-entered phone portion of the other charges address.</description>
        <label>Other Charges Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Charges_State__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: User-entered state portion of the other charges address.</description>
        <label>Other Charges State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Street1__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: User-entered street line 1 portion of other charges address.</description>
        <label>Other Charges Street1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Street2__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: User-entered street line 2 portion of the other charges address.</description>
        <label>Other Charges Street2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Zip__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: User-entered zip code portion of the other charges address.</description>
        <label>Other Charges Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date_and_Contract_Date_differs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Checkbox to indicate a difference between Payment Due Date Day and Contract Date Day.</description>
        <label>Payment Date and Contract Date differs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Deposit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Value is sent for the 4015WI and 6015WI forms, but never used and not exposed on repossession layouts. $0 default value should be the only value expected until the field is needed and exposed on a page layout.</description>
        <label>Performance Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: iRepo
INT: iRepo M2 TIBCO Pull
Trans: N
BU: RL
FD: Fee optionally assessed in repossession process and sourced from iRepo.</description>
        <label>Personal Property Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Police_Agency_City_Formula__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to send &quot;NA&quot; to Adobe Forms processing in place of city for police department with which the repossession was coordinated for a CA out-of-state repossession.</description>
        <formula>IF(Case__r.Form_Rule__r.Name = &quot;4033CA&quot;, &quot;NA&quot;, Police_Agency_City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Police Agency City Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_City__c</fullName>
        <description>SRC: iRepo
INT: iRepo M2 TIBCO Pull
Trans: N
BU: RL
FD: City of police department with which the repossession was coordinated.</description>
        <label>Police Agency City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Fee__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to hard-code the $15 police reporting fee for CA in-state repossessions. The fee, if applicable, is never collected separately for any other state.</description>
        <formula>IF(Case__r.Form_Rule__r.Name = &quot;4015CA&quot;, 15, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Police Agency Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Name_Formula__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to send &quot;NA&quot; to Adobe Forms processing in place of name for police department with which the repossession was coordinated for a CA out-of-state repossession.</description>
        <formula>IF(Case__r.Form_Rule__r.Name = &quot;4033CA&quot;, &quot;NA&quot;, Police_Agency_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Police Agency Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Name__c</fullName>
        <description>SRC: iRepo
INT: iRepo M2 TIBCO Pull
Trans: N
BU: RL
FD: Name of police department with which the repossession was coordinated.</description>
        <label>Police Agency Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Phone_Formula__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to send &quot;NA&quot; to Adobe Forms processing in place of phone for police department with which the repossession was coordinated for a CA out-of-state repossession.</description>
        <formula>IF(Case__r.Form_Rule__r.Name = &quot;4033CA&quot;, &quot;NA&quot;, Police_Agency_Phone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Police Agency Phone Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Phone__c</fullName>
        <description>SRC: iRepo
INT: iRepo M2 TIBCO Pull
Trans: N
BU: RL
FD: Phone of police department with which the repossession was coordinated.</description>
        <label>Police Agency Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Police_Agency_State_Formula__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to send &quot;NA&quot; to Adobe Forms processing in place of state for police department with which the repossession was coordinated for a CA out-of-state repossession.</description>
        <formula>IF(Case__r.Form_Rule__r.Name = &quot;4033CA&quot;, &quot;NA&quot;, TEXT(Police_Agency_State__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Police Agency State Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_State__c</fullName>
        <description>SRC: iRepo
INT: iRepo M2 TIBCO Pull
Trans: N
BU: RL
FD: State of police department with which the repossession was coordinated.</description>
        <label>Police Agency State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Street1_Formula__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to send &quot;NA&quot; to Adobe Forms processing in place of street line 1 for police department with which the repossession was coordinated for a CA out-of-state repossession.</description>
        <formula>IF(Case__r.Form_Rule__r.Name = &quot;4033CA&quot;, &quot;NA&quot;, Police_Agency_Street1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Police Agency Street1 Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Street1__c</fullName>
        <description>SRC: iRepo
INT: iRepo M2 TIBCO Pull
Trans: N
BU: RL
FD: Street line 1 of police department with which the repossession was coordinated.</description>
        <label>Police Agency Street1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Street2_Formula__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to send &quot;NA&quot; to Adobe Forms processing in place of street line 2 for police department with which the repossession was coordinated for a CA out-of-state repossession.</description>
        <formula>IF(Case__r.Form_Rule__r.Name = &quot;4033CA&quot;, &quot;NA&quot;, Police_Agency_Street2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Police Agency Street2 Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Street2__c</fullName>
        <description>SRC: iRepo
INT: iRepo M2 TIBCO Pull
Trans: N
BU: RL
FD: Street line 2 of police department with which the repossession was coordinated.</description>
        <label>Police Agency Street2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Zip_Ext_Formula__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to send &quot;NA&quot; to Adobe Forms processing in place of zip code extension for police department with which the repossession was coordinated for a CA out-of-state repossession.</description>
        <formula>IF(Case__r.Form_Rule__r.Name = &quot;4033CA&quot;, &quot;NA&quot;, Police_Agency_Zip_Ext__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Police Agency Zip Ext Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Zip_Ext__c</fullName>
        <description>SRC: iRepo
INT: iRepo M2 TIBCO Pull
Trans: N
BU: RL
FD: Zip code extension of police department with which the repossession was coordinated.</description>
        <label>Police Agency Zip Ext</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Zip_Formula__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to send &quot;NA&quot; to Adobe Forms processing in place of zip code extension for police department with which the repossession was coordinated for a CA out-of-state repossession.</description>
        <formula>IF(Case__r.Form_Rule__r.Name = &quot;4033CA&quot;, &quot;NA&quot;, Police_Agency_Zip__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Police Agency Zip Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Agency_Zip__c</fullName>
        <description>SRC: iRepo
INT: iRepo M2 TIBCO Pull
Trans: N
BU: RL
FD: Zip code of police department with which the repossession was coordinated.</description>
        <label>Police Agency Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printer_Document_Output__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to hard-code value expected by Adobe Forms processing.</description>
        <formula>&apos;Flattern PDF&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Printer Document Output</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printer__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Picklist for user to choose printer destination based on definitions in Adobe Forms.</description>
        <label>Printer</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>csceprnt79</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscehp25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscehp29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscelm16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>csceprnt70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>csceprnt80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>csceprnt84</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscwlm41-W7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscwlm12-W7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscwlm10-W7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscwhp49-W7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscclm73</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscclm67</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscclm37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscclm52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TFSW3F2018A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>csceprnt71</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscehp19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>csccprnt20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscclm43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>csccprnt59</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cscchp11</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>